--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -17,11 +17,6 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
 
-default:
-    resource: "@AppBundle/Controller/DefaultController.php"
+app:
+    resource: "@AppBundle/Controller"
     type:     annotation
-
-admin:
-    resource: "@AppBundle/Controller/AdminController.php"
-    type:     annotation
-    prefix:   /admin
